CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_LANGUAGE(CXX)

PROJECT(sfml-cpp CXX)

FIND_PACKAGE(SFML 2.0 REQUIRED system window graphics)

INCLUDE_DIRECTORIES(
  ${SFML_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

FOREACH(MODULE src include)
  FILE(GLOB MODULES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.h)
  SET(SOURCES ${MODULES_SOURCES} ${SOURCES})
ENDFOREACH(MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${VERSION_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SFML_LIBRARIES})

